cncProd/force-app/main/default/objects/Branch_Configuration__mdt/fields/Default_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Default_OwnerId__c</fullName>
    <label>Default OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>