cncProd/force-app/main/default/objects/Branch_Configuration__mdt/fields/Opp_RT__c.field-meta.xml
<CustomField>
    <fullName>Opp_RT__c</fullName>
    <label>Opp RT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>