cncProd/force-app/main/default/objects/Branch_Configuration__mdt/fields/To_Do_List_Managers__c.field-meta.xml
<CustomField>
    <fullName>To_Do_List_Managers__c</fullName>
    <label>To Do List (Managers)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>